--- a/llama/1_Llama3_파인튜닝용_데이터_생성.ipynb
+++ b/llama/1_Llama3_파인튜닝용_데이터_생성.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {
     "id": "ang-F412uefa"
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "id": "rmB92VMm-Tnl"
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {
     "id": "QLnThLA2dzcq"
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true,
     "id": "lfw9GFnleE20"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "id": "vxikmk9WMzpI"
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {
     "id": "EbNUlzAtdzhH"
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "id": "38L491Fjit3h"
    },
@@ -176,20 +176,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "id": "bIo6KBdjo23l"
    },
    "outputs": [],
    "source": [
     "#데이터 경로 및 설정 불러오기\n",
-    "datasetName = \"241113_llama_ver2.csv\"\n",
+    "datasetName = \"241113_llama_ver1.csv\"\n",
     "jsonFileName = \"llama_input.jsonl\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {
     "id": "ENjHVt88v3cq"
    },
@@ -202,7 +202,7 @@
     "        df = pd.read_csv(csv_file_path, encoding='cp949')  # 다른 인코딩을 시도\n",
     "    with open(json_file_path, \"w\", encoding='utf-8') as json_file:\n",
     "        for index, row in df.iterrows():\n",
-    "            data = {'instruction': row['input'], 'output': row['response']}\n",
+    "            data = {'Inputs': row['input'], 'output': row['response']}\n",
     "            json.dump(data, json_file, ensure_ascii=False)\n",
     "            json_file.write(\"\\n\")\n",
     "\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "id": "WHcOi8Erkflj"
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -256,7 +256,41 @@
     "id": "4f-Dhj0Rt5L2",
     "outputId": "519e25be-aed4-4cc8-867c-efea15b2cc2a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터셋 확인\n",
+      "['<s>[INST] Here is the question about software development. The title of the question is \"Why is this gunicorn, flask, bokeh application not running with 4 workers?\". and body of the question is \"<p>I am learning to use gunicorn, flask and bokeh.\\nI am trying to set up a little example to use a bokeh app with multiuser. I am working on a debian system on an AWS server with a static IP. I used the <a href=\"https://github.com/bokeh/bokeh/blob/2.4.3/examples/howto/server_embed/flask_gunicorn_embed.py\" rel=\"nofollow noreferrer\">example from git</a> and edited it in the way I think it should work. I got it to run with this command:</p>\\n<pre><code>gunicorn3 -w 1 --bind 0.0.0.0:8000 wsgi:app\\n</code></pre>\\n<p>But when I change the workers to 4 and the binded port from 5006 to 0 (flaskapp.py), I get this error in the browser console:</p>\\n<blockquote>\\n<p>:34163/bkapp/autoload.js?bokeh-autoload-element=4755&amp;bokeh-app-path=/bkapp&amp;bokeh-absolute-url=http://35.XXX.XXX.153:34163/bkapp:1          Failed to load resource: net::ERR_CONNECTION_TIMED_OUT</p>\\n</blockquote>\\n<p>Can someone tell me, why I get this error?</p>\\n<p>Here is the relevant code:</p>\\n<p><strong>flaskapp.py</strong></p>\\n<pre><code>\\nimport asyncio\\nfrom threading import Thread\\n\\nfrom flask import Flask, render_template\\nfrom tornado.httpserver import HTTPServer\\nfrom tornado.ioloop import IOLoop\\n\\nfrom bokeh.application import Application\\nfrom bokeh.application.handlers import FunctionHandler\\nfrom bokeh.embed import server_document\\nfrom bokeh.layouts import column\\nfrom bokeh.models import ColumnDataSource, Slider\\nfrom bokeh.plotting import figure\\nfrom bokeh.sampledata.sea_surface_temperature import sea_surface_temperature\\nfrom bokeh.server.server import BaseServer\\nfrom bokeh.server.tornado import BokehTornado\\nfrom bokeh.server.util import bind_sockets\\nfrom bokeh.themes import Theme\\n\\napp = Flask(__name__)\\n\\ndef bkapp(doc):\\ndf = sea_surface_temperature.copy()\\nsource = ColumnDataSource(data=df)\\n\\n    plot = figure(x_axis_type=\\'datetime\\', y_range=(0, 25), y_axis_label=\\'Temperature (Celsius)\\',\\n                  title=&quot;Sea Surface Temperature at 43.18, -70.43&quot;)\\n    plot.line(\\'time\\', \\'temperature\\', source=source)\\n    \\n    def callback(attr, old, new):\\n        if new == 0:\\n            data = df\\n        else:\\n            data = df.rolling(f&quot;{new}D&quot;).mean()\\n        source.data = ColumnDataSource.from_df(data)\\n    \\n    slider = Slider(start=0, end=30, value=0, step=1, title=&quot;Smoothing by N Days&quot;)\\n    slider.on_change(\\'value\\', callback)\\n    \\n    doc.add_root(column(slider, plot))\\n    \\n    doc.theme = Theme(filename=&quot;theme.yaml&quot;)\\n\\n# can\\'t use shortcuts here, since we are passing to low level BokehTornado\\n\\nbkapp = Application(FunctionHandler(bkapp))\\n\\n# This is so that if this app is run using something like &quot;gunicorn -w 4&quot; then\\n\\n# each process will listen on its own port\\n\\nsockets, port = bind_sockets(&quot;0.0.0.0&quot;, 0)\\n\\n@app.route(\\'/\\', methods=\\\\[\\'GET\\'\\\\])\\ndef bkapp_page():\\nscript = server_document(\\'http://35.XXX.XXX.153:%d/bkapp\\' % port)\\nprint(&quot;app port: %s&quot;, port)\\nreturn render_template(&quot;embed.html&quot;, script=script, template=&quot;Flask&quot;)\\n\\ndef bk_worker():\\nasyncio.set_event_loop(asyncio.new_event_loop())\\n\\n    bokeh_tornado = BokehTornado({\\'/bkapp\\': bkapp}, extra_websocket_origins=[&quot;*&quot;])\\n    bokeh_http = HTTPServer(bokeh_tornado)\\n    bokeh_http.add_sockets(sockets)\\n    \\n    server = BaseServer(IOLoop.current(), bokeh_tornado, bokeh_http)\\n    server.start()\\n    server.io_loop.start()\\n\\nt = Thread(target=bk_worker)\\nt.daemon = True\\nt.start()\\n</code></pre>\\n<p><strong>wsgi.py</strong></p>\\n<pre><code>\\nfrom flaskapp import app\\n\\nif __name__ == &quot;__main__&quot;:\\napp.run()\\n</code></pre>\\n<p><strong>embed.html</strong></p>\\n<pre><code>\\n\\\\&lt;!DOCTYPE html\\\\&gt;\\n\\\\&lt;html lang=&quot;en&quot;\\\\&gt;\\n\\\\&lt;head\\\\&gt;\\n\\\\&lt;meta charset=&quot;utf-8&quot;\\\\&gt;\\n{{ bokeh_css }}\\n{{ bokeh_js }}\\n\\\\&lt;link rel=&quot;stylesheet&quot; href=&quot;./static/css/styles.css&quot; type=&quot;text/css&quot;/\\\\&gt;\\n\\\\&lt;link rel=&quot;shortcut icon&quot; href=&quot;./static/favicon/favicon.ico&quot; type=&quot;image/x-icon&quot;\\\\&gt;\\n\\\\&lt;/head\\\\&gt;\\n\\\\&lt;body\\\\&gt;\\n\\\\&lt;div class=&quot;head&quot;\\\\&gt;\\n\\\\&lt;a href=&quot;http://&quot;\\\\&gt;\\\\&lt;img src=&quot;./static/images/logo.png&quot; width=&quot;93px&quot; height=&quot;36px&quot;/\\\\&gt;\\\\&lt;/a\\\\&gt;\\n\\\\&lt;/div\\\\&gt;\\n\\\\&lt;div class=&quot;body&quot;\\\\&gt;\\n{{ script|safe }}\\n\\\\&lt;/div\\\\&gt;\\n\\\\&lt;/body\\\\&gt;\\n\\\\&lt;/html\\\\&gt;\\n</code></pre>\\n\". Please explain about the \\'difficulty class\\' and \\'general ruleset\\' and \\'grenular breakdown\\' for question [/INST] difficulty class : Advanced Level Knowledge,general ruleset : A3-Data & AI,granular breakdown : ML/빅데이터/스트림처리 </s>', '<s>[INST] Here is the question about software development. The title of the question is \"replace multiple strings in a list with a single string by knowing the index\". and body of the question is \"<p>I want to replace multiple strings in a list with a single string by knowing the index. Of course I looked at this question: <a href=\"https://stackoverflow.com/questions/20499312/search-for-element-in-list-and-replace-it-by-multiple-items\">search for element in list and replace it by multiple items</a> But for my case it is inverse, suppose I have a list as follow:</p>\\n<pre><code>lst = [\\'a\\', \\'b1\\', \\'b2\\', \\'b3\\', \\'c\\']\\n</code></pre>\\n<p>I know that I have a term:</p>\\n<pre><code>term = \\'b1\\' + \\' b2\\' + \\' b3\\'\\n</code></pre>\\n<p>I also know the starting index and the length of that term</p>\\n<pre><code>lst[1:1+len(term)] = &quot;&lt;term&gt;&quot; + term + &quot;&lt;/term&gt;&quot;\\n</code></pre>\\n<p>I got this result:</p>\\n<pre><code>[\\'a\\', \\'&lt;\\', \\'t\\', \\'e\\', \\'r\\', \\'m\\', \\'&gt;\\', \\'b\\', \\'1\\', \\' \\', \\'b\\', \\'2\\', \\' \\', \\'b\\', \\'3\\', \\'&lt;\\', \\'/\\', \\'t\\', \\'e\\', \\'r\\', \\'m\\', \\'&gt;\\']\\n</code></pre>\\n<p>However, my expected output:</p>\\n<pre><code>[\\'a\\', \\'&lt;term&gt;b1 b2 b3&lt;/term&gt;\\', \\'c\\']\\n</code></pre>\\n<p>How can I adjust this to get the desired output?</p>\\n\". Please explain about the \\'difficulty class\\' and \\'general ruleset\\' and \\'grenular breakdown\\' for question [/INST] difficulty class : Intermediate Level,general ruleset : I3-Frameworks,granular breakdown : 웹 프레임워크/ORM </s>']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving the dataset (1/1 shards): 100%|██████████| 44/44 [00:00<00:00, 14458.58 examples/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터셋 info 확인\n",
+      "Dataset({\n",
+      "    features: ['conversations'],\n",
+      "    num_rows: 44\n",
+      "})\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import jsonlines\n",
     "from datasets import Dataset\n",
@@ -265,10 +299,10 @@
     "indataset = []\n",
     "with jsonlines.open(json_file_path) as f:\n",
     "    for line in f.iter():\n",
-    "        indataset.append(f\"<s>[instruction] {line['instruction']} [/instruction] [output]{line['output']} [/output]</s>\")\n",
+    "         indataset.append(f\"<s>[INST] {line['Inputs']} [/INST] {line['output']} </s>\")\n",
     "\n",
     "print('데이터셋 확인')\n",
-    "print(indataset[:5])\n",
+    "print(indataset[:2])\n",
     "\n",
     "# 데이터셋을 사전으로 변환하여 Hugging Face Dataset으로 저장\n",
     "indataset = Dataset.from_dict({'conversations': indataset})\n",
@@ -280,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -288,14 +322,28 @@
     "id": "dBcLQsOluDbP",
     "outputId": "0fcee8a1-adcf-4db8-d626-4dbcc7239f76"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['conversations'],\n",
+       "    num_rows: 44\n",
+       "})"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "indataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -339,18 +387,56 @@
     "id": "41mTJcNFcMY0",
     "outputId": "b847e2ee-a491-435b-874e-b89b7c491f5b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating parquet from Arrow format: 100%|██████████| 1/1 [00:00<00:00, 1153.23ba/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Uploading the dataset shards: 100%|██████████| 1/1 [00:01<00:00,  1.19s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/datasets/myokyung/llama_test/commit/a767cd1199930880a1c8280cc69fb0e58d829e5d', commit_message='Upload dataset', commit_description='', oid='a767cd1199930880a1c8280cc69fb0e58d829e5d', pr_url=None, repo_url=RepoUrl('https://huggingface.co/datasets/myokyung/llama_test', endpoint='https://huggingface.co', repo_type='dataset', repo_id='myokyung/llama_test'), pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 허깅페이스에 업로드\n",
-    "indataset.push_to_hub(\"myokyung/llama_Unsloth_test\")"
+    "indataset.push_to_hub(\"myokyung/llama_test\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "UgvC2ZYdyQmW"
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
