--- a/llama/hugg_local_ver.ipynb
+++ b/llama/hugg_local_ver.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://blog.sionic.ai/finetuning_llama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
