--- a/llama/JJOOFFGGKK.ipynb
+++ b/llama/JJOOFFGGKK.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,23 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'question': '스티브 잡스와 아인슈타인 중 누가 더 오래 살았나요?',\n",
-       "  'answer': '이 질문에 추가 질문이 필요한가요: 예.\\n추가 질문: 스티브 잡스는 몇 살에 사망했나요?\\n중간 답변: 스티브 잡스는 56세에 사망했습니다.\\n추가 질문: 아인슈타인은 몇 살에 사망했나요?\\n중간 답변: 아인슈타인은 76세에 사망했습니다.\\n최종 답변은: 아인슈타인\\n'},\n",
-       " {'question': '네이버의 창립자는 언제 태어났나요?',\n",
-       "  'answer': '이 질문에 추가 질문이 필요한가요: 예.\\n추가 질문: 네이버의 창립자는 누구인가요?\\n중간 답변: 네이버는 이해진에 의해 창립되었습니다.\\n추가 질문: 이해진은 언제 태어났나요?\\n중간 답변: 이해진은 1967년 6월 22일에 태어났습니다.\\n최종 답변은: 1967년 6월 22일\\n'},\n",
-       " {'question': '율곡 이이의 어머니가 태어난 해의 통치하던 왕은 누구인가요?',\n",
-       "  'answer': '이 질문에 추가 질문이 필요한가요: 예.\\n추가 질문: 율곡 이이의 어머니는 누구인가요?\\n중간 답변: 율곡 이이의 어머니는 신사임당입니다.\\n추가 질문: 신사임당은 언제 태어났나요?\\n중간 답변: 신사임당은 1504년에 태어났습니다.\\n추가 질문: 1504년에 조선을 통치한 왕은 누구인가요?\\n중간 답변: 1504년에 조선을 통치한 왕은 연산군입니다.\\n최종 답변은: 연산군\\n'},\n",
-       " {'question': '올드보이와 기생충의 감독이 같은 나라 출신인가요?',\n",
-       "  'answer': '이 질문에 추가 질문이 필요한가요: 예.\\n추가 질문: 올드보이의 감독은 누구인가요?\\n중간 답변: 올드보이의 감독은 박찬욱입니다.\\n추가 질문: 박찬욱은 어느 나라 출신인가요?\\n중간 답변: 박찬욱은 대한민국 출신입니다.\\n추가 질문: 기생충의 감독은 누구인가요?\\n중간 답변: 기생충의 감독은 봉준호입니다.\\n추가 질문: 봉준호는 어느 나라 출신인가요?\\n중간 답변: 봉준호는 대한민국 출신입니다.\\n최종 답변은: 예\\n'}]"
+       "[{'question': '스티브 잡스와 아인슈타인 중 누가 더 오래 살았나요?', 'answer': '아인슈타인\\n'},\n",
+       " {'question': '네이버의 창립자는 언제 태어났나요?', 'answer': '1967년 6월 22일\\n'},\n",
+       " {'question': '율곡 이이의 어머니가 태어난 해의 통치하던 왕은 누구인가요?', 'answer': '연산군\\n'},\n",
+       " {'question': '올드보이와 기생충의 감독이 같은 나라 출신인가요?', 'answer': '예\\n'}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +75,7 @@
       "Question:\n",
       "스티브 잡스와 아인슈타인 중 누가 더 오래 살았나요?\n",
       "Answer:\n",
-      "이 질문에 추가 질문이 필요한가요: 예.\n",
-      "추가 질문: 스티브 잡스는 몇 살에 사망했나요?\n",
-      "중간 답변: 스티브 잡스는 56세에 사망했습니다.\n",
-      "추가 질문: 아인슈타인은 몇 살에 사망했나요?\n",
-      "중간 답변: 아인슈타인은 76세에 사망했습니다.\n",
-      "최종 답변은: 아인슈타인\n",
+      "아인슈타인\n",
       "\n"
      ]
     }
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,51 +100,25 @@
       "Question:\n",
       "스티브 잡스와 아인슈타인 중 누가 더 오래 살았나요?\n",
       "Answer:\n",
-      "이 질문에 추가 질문이 필요한가요: 예.\n",
-      "추가 질문: 스티브 잡스는 몇 살에 사망했나요?\n",
-      "중간 답변: 스티브 잡스는 56세에 사망했습니다.\n",
-      "추가 질문: 아인슈타인은 몇 살에 사망했나요?\n",
-      "중간 답변: 아인슈타인은 76세에 사망했습니다.\n",
-      "최종 답변은: 아인슈타인\n",
+      "아인슈타인\n",
       "\n",
       "\n",
       "Question:\n",
       "네이버의 창립자는 언제 태어났나요?\n",
       "Answer:\n",
-      "이 질문에 추가 질문이 필요한가요: 예.\n",
-      "추가 질문: 네이버의 창립자는 누구인가요?\n",
-      "중간 답변: 네이버는 이해진에 의해 창립되었습니다.\n",
-      "추가 질문: 이해진은 언제 태어났나요?\n",
-      "중간 답변: 이해진은 1967년 6월 22일에 태어났습니다.\n",
-      "최종 답변은: 1967년 6월 22일\n",
+      "1967년 6월 22일\n",
       "\n",
       "\n",
       "Question:\n",
       "율곡 이이의 어머니가 태어난 해의 통치하던 왕은 누구인가요?\n",
       "Answer:\n",
-      "이 질문에 추가 질문이 필요한가요: 예.\n",
-      "추가 질문: 율곡 이이의 어머니는 누구인가요?\n",
-      "중간 답변: 율곡 이이의 어머니는 신사임당입니다.\n",
-      "추가 질문: 신사임당은 언제 태어났나요?\n",
-      "중간 답변: 신사임당은 1504년에 태어났습니다.\n",
-      "추가 질문: 1504년에 조선을 통치한 왕은 누구인가요?\n",
-      "중간 답변: 1504년에 조선을 통치한 왕은 연산군입니다.\n",
-      "최종 답변은: 연산군\n",
+      "연산군\n",
       "\n",
       "\n",
       "Question:\n",
       "올드보이와 기생충의 감독이 같은 나라 출신인가요?\n",
       "Answer:\n",
-      "이 질문에 추가 질문이 필요한가요: 예.\n",
-      "추가 질문: 올드보이의 감독은 누구인가요?\n",
-      "중간 답변: 올드보이의 감독은 박찬욱입니다.\n",
-      "추가 질문: 박찬욱은 어느 나라 출신인가요?\n",
-      "중간 답변: 박찬욱은 대한민국 출신입니다.\n",
-      "추가 질문: 기생충의 감독은 누구인가요?\n",
-      "중간 답변: 기생충의 감독은 봉준호입니다.\n",
-      "추가 질문: 봉준호는 어느 나라 출신인가요?\n",
-      "중간 답변: 봉준호는 대한민국 출신입니다.\n",
-      "최종 답변은: 예\n",
+      "예\n",
       "\n",
       "\n",
       "Question:\n",
@@ -177,16 +142,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Question:\\n스티브 잡스와 아인슈타인 중 누가 더 오래 살았나요?\\nAnswer:\\n아인슈타인\\n\\n\\nQuestion:\\n네이버의 창립자는 언제 태어났나요?\\nAnswer:\\n1967년 6월 22일\\n\\n\\nQuestion:\\n율곡 이이의 어머니가 태어난 해의 통치하던 왕은 누구인가요?\\nAnswer:\\n연산군\\n\\n\\nQuestion:\\n올드보이와 기생충의 감독이 같은 나라 출신인가요?\\nAnswer:\\n예\\n\\n\\nQuestion:\\nGoogle이 창립된 연도에 Bill Gates의 나이는 몇 살인가요?\\nAnswer:'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*Basic Level Knowledge* | *B3-Common Problems* | *Error handling/File operations*\n",
+      "*Basic Level Knowledge* | *B3-General problem solving* | *General problem solving*\n",
+      " \n",
+      "*Basic Level Knowledge* | *B3-General problem solving* | *General problem solving*\n",
       "\n",
-      "This question requires basic knowledge of error handling and file operations in Python. The user is trying to solve a common problem, but the question does not require advanced concepts or optimization techniques"
+      "*Basic Level Knowledge* | *B3-General problem solving* | *General problem solving*\n",
+      "\n",
+      "*Basic Level Knowledge* | *B3-General problem solving* | *General problem solving*\n",
+      "\n",
+      "*Basic Level Knowledge* | *B3-General problem solving* | *General problem solving"
      ]
     }
    ],
